Kubernetes/POD/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: netology-pod
spec:
  containers:
    - image: wbitt/network-multitool
      name: multitool
      ports:
        - containerPort: 9003
          name: multitool-9003
