Kubernetes/POD/Service3.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
    - name: nginx-80
      port: 80
      protocol: TCP
      targetPort: nginx-80
  selector:
    app: frontend
