Kubernetes/POD/Service4.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - name: multitool-8080
      port: 8080
      protocol: TCP
      targetPort: multitool-8080
  selector:
    app: backend
