Kubernetes/POD/service2.yml
apiVersion: v1
kind: Service
metadata:
  name: netology-node-port
spec:
  ports:
    - name: nginx-80
      port: 80
      protocol: TCP
      nodePort: 30080
  selector:
    app: nginx
  type: NodePort
